# ChangeLog for GLSR
# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
#
# $Id: ChangeLog,v 1.30 2004/12/16 15:43:31 port001 Exp $

16 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Added some experimental SQL abstraction code, maybe not of any use in this
   project, but who knows!
 * Revamped the MySQL module
 * Converted admin/Page_Statistics to new module format
   Note: This page will appear broken untill all the modules have been converted 
 * Fixes

15 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Tiny fix in index.py
 * Added missing entry for state table in pym/Config.py

13 Dec 2004; Scott Hadfield <hadfield@gentoo.org>:
 * Total rewrite of the template module. This should hopefully make debugging
   leaps and bounds easier. It should also speed up processing time and make
   the class much more flexible. Note that this rewrite should be fully
   compatible with the old templates.
 * Added the ability to add comments to templates. Put comments within {* *}.
 * Bug and formatting fixes on the page dispatcher (index.py)
 * Small bug fix in User.py (calling self in the global area of the class)
 * Added uid to the header output (index.py)
 * Added a 'RecentSub' function to Script.py to return the most recent
   subscript.
  
18 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Login fixes (redirect on login/logout)

14 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * offset for the error report list
 * Print to the top of the error report log

12 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Form fixes
 * Bug fixes
 * New feature to optimize MySQL tables

10 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Added a timeout check to wait_threads()
 * Added a HeaderTmplSent bool to the State module
 * Moved HTMLHeadersSent into the State module
 * Bug fixes

09 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Implemented a basic threading class
 * Threaded loading of page modules
