@@ -2,7 +2,7 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: MySQL.py,v 1.8 2004/12/16 14:06:26 port001 Exp $
+# $Id: MySQL.py,v 1.9 2004/12/18 02:14:12 port001 Exp $
 #
 
 __modulename__ = "MySQL"
@@ -23,9 +23,9 @@ class MySQL:
     def __init__(self):
 
         self._db = None
-	self._cursor = None
-	self._t_start = 0
-	self._fetch = ""
+        self._cursor = None
+        self._t_start = 0
+        self._fetch = ""
 	self._result = None
 
     def _connect(self):
@@ -43,10 +43,10 @@ class MySQL:
 
     def validate_args(self):
         """
-	A last ditch effort to make sure that no database inputs are too long.
-	"""
+        A last ditch effort to make sure that no database inputs are too long.
+        """
 	
-	retval = []
+        retval = []
 	
         for key,val in self._args.iteritems():
             retval.append(val[:Const.FIELD_LEN[table][key]])
@@ -55,7 +55,7 @@ class MySQL:
     def _init_query(self):
 
         self._t_start = start_timer()
-	self._connect()
+        self._connect()
 
         try:
             self._cursor.execute(self._query, self._args)
@@ -66,14 +66,14 @@ class MySQL:
                                                                                 
         self._db.commit()
         
-    def _fetch(self):
+    def _get_result(self):
                                                                                                                                       
         if self._fetch == "one":
             self._result = self._cursor.fetchone()
             logwrite("""%s, Args: %s, Timing: %.5f(s)""" % (self._query, self._args, eval_timer(self._t_start, stop_timer())), __modulename__, "Query")
         elif self._fetch == "none":
+            self._result = None
             logwrite("""%s, Args: %s, Timing: %.5f(s)""" % (self._query, self._args, eval_timer(self._t_start, stop_timer())), __modulename__, "Query")
-            return
         else:
             self._result = self._cursor.fetchall()
             logwrite("""%s, Args: %s, Timing: %.5f(s)""" % (self._query, self._args, eval_timer(self._t_start, stop_timer())), __modulename__, "Query") 
@@ -85,11 +85,13 @@ class MySQL:
         """
 
         self._query = query
-	self._args = args
-	self._fetch = fetch
+        self._args = args
+        self._fetch = fetch
 
         self._init_query()
-        return self._fetch()
+        self._get_result()
 
-    validate_args = classmethod(self.validate_args)
+        return self._result
+
+    validate_args = classmethod(validate_args)
 
