@@ -2,7 +2,10 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.30 2004/12/16 15:43:31 port001 Exp $
+# $Id: ChangeLog,v 1.31 2004/12/18 02:14:12 port001 Exp $
+
+18 Dec 2004; Ian Leitch <port001@gentoo.org>:
+ * Fixes in the MySQL module
 
 16 Dec 2004; Ian Leitch <port001@gentoo.org>:
  * Added some experimental SQL abstraction code, maybe not of any use in this
